# fastapi-elasticsearch-data-catalog

./: README.md  app.py  docker-compose.yml  postman_test_collection.json  pyproject.toml
.github/workflows/: run_tests.yml
connector/: Connector.py  Postgres.py
models/: Asset.py  Column.py  Database.py  Domain.py  Table.py
routes/: Column.py  Database.py  Domain.py  Ingest.py  Search.py  Table.py
services/: ElasticsearchService.py  Logger.py
templates/: index.html  visualize.html
tests/: conftest.py  test_app.py
tests/connector/: postgresql.sql  test_postgres.py
utilities/: DatabaseHelpers.py  DomainHelpers.py
